added excel and fixed styling

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <h1 class="title">Term 2 Courses</h1>
     <div class="row">
 
-      <div id="frontend-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
+      <div id="frontend-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
         <h2 class="title">HTML & CSS</h2>
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
         <ul class="feature-list list-unstyled">
@@ -176,14 +176,14 @@
         <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
       </div>
 
-      <div id="android-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
+      <div id="android-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
         <h2 class="title">Android</h2>
         <h2 class="title"><i class="fa fa-android"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Intermediate</strong></li>
           <li>Price: <strong>£60</strong></li>
           <li>8 X 2 hour sessions</li>
-          <li>Teaching real project management and developer skills</li>
+          <li>Developer skills</li>
           <li>Building an app from the first session</li>
           <li class="read-more"><a>More details on the course</a></li>
         </ul>
@@ -197,11 +197,9 @@
             <li>Building a 3rd activity</li>
           </ul>
         </div>
-        <!-- <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/Z8v7PN" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
       </div>
 
-      <div id="ruby-course" class="container text-center col-md-4 col-sm-12 col-xs-12">
+      <div id="ruby-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
         <h2 class="title">Ruby</h2>
         <h2 class="title"><i class="fa fa-diamond"></i></h2>
         <ul class="feature-list list-unstyled">
@@ -222,8 +220,29 @@
             <li>Creating methods</li>
           </ul>
         </div>
-        <!-- <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/io73kp" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
+      </div>
+
+      <div id="excel-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
+        <h2 class="title">Excel</h2>
+        <h2 class="title"><i class="fa fa-file-excel-o" ></i></h2>
+        <ul class="feature-list list-unstyled">
+          <li>Level: <strong>Beginner</strong></li>
+          <li>Price: <strong>£60</strong></li>
+          <li>5 X 2 hour sessions</li>
+          <li>Lorem Ipsum</li>
+          <li>Lorem Ipsum</li>
+          <li class="read-more"><a>More details on the course</a></li>
+        </ul>
+        <div class="course-details">
+          <h4>Starting Week 5 | Tuesdays 5-7</h4>
+          <p>First 4 sessions:</p>
+          <ul class="feature-list list-unstyled">
+            <li>Ruby & command line Intro</li>
+            <li>Numbers, strings, properties</li>
+            <li>Arrays, variable, methods</li>
+            <li>Creating methods</li>
+          </ul>
+        </div>
       </div>
 
     </div>
