Added new instructors

--- a/index.html
+++ b/index.html
@@ -223,24 +223,24 @@
       </div>
 
       <div id="excel-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
-        <h2 class="title">Excel</h2>
+        <h2 class="title">VBA & Excel</h2>
         <h2 class="title"><i class="fa fa-file-excel-o" ></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginner</strong></li>
           <li>Price: <strong>£60</strong></li>
-          <li>5 X 2 hour sessions</li>
-          <li>Lorem Ipsum</li>
-          <li>Lorem Ipsum</li>
+          <li>6 X 2 hour sessions</li>
+          <li>Intro to coding in excel and finiancial modelling</li>
+          <li>Mentorship for your interships</li>
           <li class="read-more"><a>More details on the course</a></li>
         </ul>
         <div class="course-details">
-          <h4>Starting Week 5 | Tuesdays 5-7</h4>
+          <h4>Starting Week 5 | Fridays 5-7</h4>
           <p>First 4 sessions:</p>
           <ul class="feature-list list-unstyled">
-            <li>Ruby & command line Intro</li>
-            <li>Numbers, strings, properties</li>
-            <li>Arrays, variable, methods</li>
-            <li>Creating methods</li>
+            <li>Intro to VBA</li>
+            <li>Managing data flow</li>
+            <li>Automating tasks & intro to modelling</li>
+            <li>Basic and advanced models</li>
           </ul>
         </div>
       </div>
@@ -347,7 +347,38 @@
             </ul>
           </div>
         </div>
+        <div class="author-message-left col-lg-6">
+          <div class="speech-bubble">
+            <img class="img-responsive" src="assets/images/fadi.png" alt="" />
+            <h3 class="title">Paulo Costa</h3>
+            <h4 class="sub-title">VBA & Excel</h4>
+            <p>2nd year Accounting & Finance</p>
+            <p>2 Internships at Goldman Sachs in Securities</p>
+            <p></p>
+            <ul class="social-icons list-inline">
+              <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li class="last"><a href="mailto: fadi@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
 
+        <div class="author-message-right col-lg-6">
+          <div class="speech-bubble">
+            <img class="img-responsive" src="assets/images/wesley.png" alt="" />
+            <h3 class="title">George Wynne</h3>
+            <h4 class="sub-title">VBA & Excel Course</h4>
+            <p>2nd year Maths</p>
+            <p>Intern at Elevaate</p>
+            <p></p>
+            <ul class="social-icons list-inline">
+              <!-- <li><a href="https://www.twitter.com/zaidlahham" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
+              <li><a href="https://www.linkedin.com/in/wesley-haigh-20a10595" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li class="last"><a href="mailto: wesley@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+
+       
       </div>
       <div class="join-us">
         <h3>We are currently recruiting Teachers and a Head of Marketing for next year! If you would like to introduce/take over a course or apply for Marketing, please fill in this   <a class="typeform-share link" href="https://warwickcoding.typeform.com/to/tbuPbb" data-mode="1" target="_blank">form</a></h3>
