--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container text-center">
       <img class="img-responsive" src="assets/images/welcomeToWC.png">
       <div class="btns">
-        <a class="btn btn-cta-secondary scrollto" href="#courses">Registration Closed</a>
+        <a class="btn btn-cta-secondary scrollto" href="#courses">Register!</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
       </div>
     </div>
@@ -229,7 +229,7 @@
           <li>Level: <strong>Beginner</strong></li>
           <li>Price: <strong>£60</strong></li>
           <li>6 X 2 hour sessions</li>
-          <li>Intro to coding in excel and finiancial modelling</li>
+          <li>Coding in excel and finiancial modelling</li>
           <li>Mentorship for your interships</li>
           <li class="read-more"><a>More details on the course</a></li>
         </ul>
@@ -368,17 +368,15 @@
             <h3 class="title">George Wynne</h3>
             <h4 class="sub-title">VBA & Excel Course</h4>
             <p>2nd year Maths</p>
-            <p>Intern at Elevaate</p>
+            <p>Internship at Elevaate</p>
             <p></p>
             <ul class="social-icons list-inline">
-              <!-- <li><a href="https://www.twitter.com/zaidlahham" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
+              <li><a href="https://www.twitter.com/zaidlahham" target="_blank"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://www.linkedin.com/in/wesley-haigh-20a10595" target="_blank"><i class="fa fa-linkedin"></i></a></li>
               <li class="last"><a href="mailto: wesley@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
-
-       
       </div>
       <div class="join-us">
         <h3>We are currently recruiting Teachers and a Head of Marketing for next year! If you would like to introduce/take over a course or apply for Marketing, please fill in this   <a class="typeform-share link" href="https://warwickcoding.typeform.com/to/tbuPbb" data-mode="1" target="_blank">form</a></h3>
