--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <i class="fa fa-graduation-cap"></i>
           </div>
           <div class="content">
-            <h3 class="sub-title">133 Student reached</h3>
-            <p>In one year we were able to teach 133 students how to build a website and we aim to give as many people the skills to achieve their goals this year</p>
+            <h3 class="sub-title">170 Student reached</h3>
+            <p>We were fortunate to teach over 170 students how to build a website and we aim to give many more people the skills to achieve their goals this year</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
