updated index with correct images

--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
         </div>
         <div class="author-message-left col-lg-6">
           <div class="speech-bubble">
-            <img class="img-responsive" src="assets/images/fadi.png" alt="" />
+            <img class="img-responsive" src="assets/images/paulo.png" alt="" />
             <h3 class="title">Paulo Costa</h3>
-            <h4 class="sub-title">VBA & Excel</h4>
+            <h4 class="sub-title">VBA & Excel Course</h4>
             <p>2nd year Accounting & Finance</p>
             <p>2 Internships at Goldman Sachs in Securities</p>
             <p></p>
@@ -364,7 +364,7 @@
 
         <div class="author-message-right col-lg-6">
           <div class="speech-bubble">
-            <img class="img-responsive" src="assets/images/wesley.png" alt="" />
+            <img class="img-responsive" src="assets/images/george.png" alt="" />
             <h3 class="title">George Wynne</h3>
             <h4 class="sub-title">VBA & Excel Course</h4>
             <p>2nd year Maths</p>
