Added contact links for new instructors

--- a/index.html
+++ b/index.html
@@ -325,7 +325,6 @@
             <p>Built the geography based game <a href="https://play.google.com/store/apps/details?id=com.jamobiles.globetrotter" target="_blank">Globetrotter.</a> </p>
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/WesleyHaigh" target="_blank"><i class="fa fa-github"></i></a></li>
-              <!-- <li><a href="https://www.twitter.com/zaidlahham" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
               <li><a href="https://www.linkedin.com/in/wesley-haigh-20a10595" target="_blank"><i class="fa fa-linkedin"></i></a></li>
               <li class="last"><a href="mailto: wesley@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
@@ -339,7 +338,6 @@
             <h4 class="sub-title">Marketing</h4>
             <p>Class of '15 Economics</p>
             <p>I am deeply fascinated by how coding changes one's world</p>
-            <!-- <p>more info here</p> -->
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/fadi-hakim" target="_blank"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -354,14 +352,13 @@
             <h4 class="sub-title">VBA & Excel Course</h4>
             <p>2nd year Accounting & Finance</p>
             <p>2 Internships at Goldman Sachs in Securities</p>
-            <p></p>
             <ul class="social-icons list-inline">
-              <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
-              <li class="last"><a href="mailto: fadi@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li><a href="https://www.twitter.com/StocKosta" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://uk.linkedin.com/in/paulo-costa-594027a8" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li class="last"><a href="mailto: paulo@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
-
         <div class="author-message-right col-lg-6">
           <div class="speech-bubble">
             <img class="img-responsive" src="assets/images/george.png" alt="" />
@@ -371,11 +368,11 @@
             <p>Internship at Elevaate</p>
             <p></p>
             <ul class="social-icons list-inline">
-              <li><a href="https://www.twitter.com/zaidlahham" target="_blank"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/wesley-haigh-20a10595" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              <li class="last"><a href="mailto: wesley@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li><a href="https://uk.linkedin.com/in/georgewynne" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li class="last"><a href="mailto: george@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
+
         </div>
       </div>
       <div class="join-us">
