added excel typeform

--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
             <li>CSS Intro</li>
           </ul>
         </div>
-        <!-- <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/fBBa6S" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
+        <a class="typeform-share button btn btn-cta-primary" >Closed</a>
       </div>
 
       <div id="android-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
@@ -197,6 +196,7 @@
             <li>Building a 3rd activity</li>
           </ul>
         </div>
+        <a class="typeform-share button btn btn-cta-primary">Closed</a>
       </div>
 
       <div id="ruby-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
@@ -220,6 +220,7 @@
             <li>Creating methods</li>
           </ul>
         </div>
+        <a class="typeform-share button btn btn-cta-primary">Closed</a>
       </div>
 
       <div id="excel-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
@@ -243,10 +244,10 @@
             <li>Basic and advanced models</li>
           </ul>
         </div>
+          <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/lFjHQO" data-mode="1" target="_blank">SIGN UP!</a>
+          <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
       </div>
-
     </div>
-
     <div class="payment-info text-center">
       <p>* We use <i class="fa fa-cc-stripe"></i> for all of our payments</p>
       <sup>If you sign up to any of the courses with a friend, you will be eligible for a group discount | More details on the sign up forms</sup>
