Updated Join Us

--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@
         </div>
       </div>
       <div class="join-us">
-        <h3>We are currently recruiting Teachers and a Head of Marketing for next year! If you would like to introduce/take over a course or apply for Marketing, please fill in this   <a class="typeform-share link" href="https://warwickcoding.typeform.com/to/tbuPbb" data-mode="1" target="_blank">form</a></h3>
+        <h3>We are currently recruiting Teachers and a Head of Marketing for next year! </h3>
+        <h3>If you would like to introduce/take over a course or apply for Marketing, please fill in this   <a class="typeform-share link" href="https://warwickcoding.typeform.com/to/tbuPbb" data-mode="1" target="_blank">form</a></h3>
         <script>
           (function() {
             var qs, js, q, s, d = document,
