changed excel times

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <li class="read-more"><a>More details on the course</a></li>
         </ul>
         <div class="course-details">
-          <h4>Starting Week 5 | Fridays 5-7</h4>
+          <h4>Starting Week 5 | Fridays 4-6</h4>
           <p>First 4 sessions:</p>
           <ul class="feature-list list-unstyled">
             <li>Intro to VBA</li>
@@ -342,6 +342,8 @@
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/fadi-hakim" target="_blank"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/fhakim" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+
               <li class="last"><a href="mailto: fadi@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
