--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
           <li>Level: <strong>Beginner</strong></li>
           <li>Price: <strong>£60</strong></li>
           <li>6 X 2 hour sessions</li>
-          <li>Coding in excel and finiancial modelling</li>
-          <li>Mentorship for your interships</li>
+          <li>Coding in Excel and financial modelling</li>
+          <li>Mentorship for your internships</li>
           <li class="read-more"><a>More details on the course</a></li>
         </ul>
         <div class="course-details">
