--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <li class="nav-item"><a class="scrollto" href="#about">About</a></li>
             <li class="nav-item"><a class="scrollto" href="#courses">Courses</a></li>
             <li class="nav-item"><a class="scrollto" href="#team">Team</a></li>
-            <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
+            <li class="nav-item "><a class="scrollto" href="#contact">Contact</a></li>
+            <li class="nav-item last"><a href="news.html">News</a></li>
           </ul>
         </div>
       </nav>
