Closed Excel course

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container text-center">
       <img class="img-responsive" src="assets/images/welcomeToWC.png">
       <div class="btns">
-        <a class="btn btn-cta-secondary scrollto" href="#courses">Register!</a>
+        <a class="btn btn-cta-secondary scrollto" href="#courses">Our Courses</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
       </div>
     </div>
@@ -98,8 +98,8 @@
             <i class="fa fa-graduation-cap"></i>
           </div>
           <div class="content">
-            <h3 class="sub-title">170 Student reached</h3>
-            <p>We were fortunate to teach over 170 students how to build a website and we aim to give many more people the skills to achieve their goals this year</p>
+            <h3 class="sub-title">204 Student reached</h3>
+            <p>We were fortunate to teach over 200 students how to code and we aim to give many more people the skills to achieve their goals this year</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -244,8 +244,7 @@
             <li>Basic and advanced models</li>
           </ul>
         </div>
-          <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/lFjHQO" data-mode="1" target="_blank">SIGN UP!</a>
-          <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+          <a class="typeform-share button btn btn-cta-primary">Closed</a>
       </div>
     </div>
     <div class="payment-info text-center">
@@ -255,7 +254,6 @@
   </section>
 
   <section id="testimonials" class="testimonials section">
-    <!-- <h2 class="title">Testimonials</h2> -->
     <div class="owl-carousel owl-theme" id="student-testimonials">
       <div class="item">
         <p>Good speed, a lot was covered, lecturer was great.</p>
