--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
         <div class="navbar-header">
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-collapse">
@@ -70,7 +67,7 @@
   <!-- ******PROMO****** -->
   <section id="promo" class="promo section offset-header">
     <div class="container text-center">
-      <img class="img-responsive" src="assets/images/welcomeToWC.png">
+      <img class="img-responsive" src="assets/images/welcomeToWC.png" alt="welcome image">
       <div class="btns">
         <a class="btn btn-cta-secondary scrollto" href="#courses">Our Courses</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
@@ -152,7 +149,7 @@
     <div class="row">
 
       <div id="frontend-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
-        <h2 class="title">HTML & CSS</h2>
+        <h2 class="title">HTML &amp; CSS</h2>
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginners</strong></li>
@@ -214,7 +211,7 @@
           <h4>Starting Week 3 | Tuesdays 5-7</h4>
           <p>First 4 sessions:</p>
           <ul class="feature-list list-unstyled">
-            <li>Ruby & command line Intro</li>
+            <li>Ruby &amp; command line Intro</li>
             <li>Numbers, strings, properties</li>
             <li>Arrays, variable, methods</li>
             <li>Creating methods</li>
@@ -224,7 +221,7 @@
       </div>
 
       <div id="excel-course" class="container text-center col-md-3 col-sm-6 col-xs-12">
-        <h2 class="title">VBA & Excel</h2>
+        <h2 class="title">VBA &amp; Excel</h2>
         <h2 class="title"><i class="fa fa-file-excel-o" ></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginner</strong></li>
@@ -240,7 +237,7 @@
           <ul class="feature-list list-unstyled">
             <li>Intro to VBA</li>
             <li>Managing data flow</li>
-            <li>Automating tasks & intro to modelling</li>
+            <li>Automating tasks &amp; intro to modelling</li>
             <li>Basic and advanced models</li>
           </ul>
         </div>
@@ -288,12 +285,14 @@
             <img class="img-responsive" src="assets/images/raph.png" alt="" />
             <h3 class="title">Raphael Weninger</h3>
             <h4 class="sub-title">Founder</h4>
-            <p>3rd year Management</a>
-              <p>I am deeply involved in Warwick's technology and entrepreneurship ecosystem</p>
-              <ul class="social-icons list-inline">
-                <li><a href="https://www.linkedin.com/in/raphaelweninger" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                <li class="last"><a href="mailto: raphael@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
-              </ul>
+            <p>3rd year Management</p>
+            <p>I am deeply involved in Warwick's technology and entrepreneurship ecosystem</p>
+            <ul class="social-icons list-inline">
+              <li><a href="https://www.linkedin.com/in/raphaelweninger" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li class="last">
+                <a href="mailto:raphael@warwickcoding.com"><i class="fa fa-envelope"></i></a>
+              </li>
+            </ul>
           </div>
         </div>
 
@@ -303,13 +302,13 @@
             <h3 class="title">Zaid Al Lahham</h3>
             <h4 class="sub-title">Frontend and Ruby Course</h4>
             <p>Class of '15 Engineering</p>
-            <p>Technology & gadgets are my weak spot</p>
+            <p>Technology &amp; gadgets are my weak spot</p>
             <p>I got my real taste of software development at <a href="http://www.makersacademy.com/" target="_blank">Makers Academy</a></p>
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/zlahham" target="_blank"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.twitter.com/zaidlahham" target="_blank"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://www.linkedin.com/in/zaidlahham" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              <li class="last"><a href="mailto: zaid@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li class="last"><a href="mailto:zaid@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
@@ -325,7 +324,7 @@
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/WesleyHaigh" target="_blank"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.linkedin.com/in/wesley-haigh-20a10595" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              <li class="last"><a href="mailto: wesley@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li class="last"><a href="mailto:wesley@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
@@ -342,7 +341,7 @@
               <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://www.linkedin.com/in/fhakim" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 
-              <li class="last"><a href="mailto: fadi@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li class="last"><a href="mailto:fadi@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
@@ -350,13 +349,13 @@
           <div class="speech-bubble">
             <img class="img-responsive" src="assets/images/paulo.png" alt="" />
             <h3 class="title">Paulo Costa</h3>
-            <h4 class="sub-title">VBA & Excel Course</h4>
-            <p>2nd year Accounting & Finance</p>
+            <h4 class="sub-title">VBA &amp; Excel Course</h4>
+            <p>2nd year Accounting &amp; Finance</p>
             <p>2 Internships at Goldman Sachs in Securities</p>
             <ul class="social-icons list-inline">
               <li><a href="https://www.twitter.com/StocKosta" target="_blank"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://uk.linkedin.com/in/paulo-costa-594027a8" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              <li class="last"><a href="mailto: paulo@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li class="last"><a href="mailto:paulo@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
@@ -364,13 +363,13 @@
           <div class="speech-bubble">
             <img class="img-responsive" src="assets/images/george.png" alt="" />
             <h3 class="title">George Wynne</h3>
-            <h4 class="sub-title">VBA & Excel Course</h4>
+            <h4 class="sub-title">VBA &amp; Excel Course</h4>
             <p>2nd year Maths</p>
             <p>Internship at Elevaate</p>
             <p></p>
             <ul class="social-icons list-inline">
               <li><a href="https://uk.linkedin.com/in/georgewynne" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              <li class="last"><a href="mailto: george@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+              <li class="last"><a href="mailto:george@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
 
@@ -411,7 +410,7 @@
           <ul class="social-icons list-inline">
             <li><a href="https://github.com/warwickcoding" target="_blank"><i class="fa fa-github"></i></a></li>
             <li><a href="https://www.facebook.com/warwickcoding" target="_blank"><i class="fa fa-facebook"></i></a></li>
-            <li class="last"><a href="mailto: raphael@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
+            <li class="last"><a href="mailto:raphael@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
           </ul>
         </div>
       </div>
@@ -424,7 +423,7 @@
       <p>Copyright <i class="fa fa-copyright"></i> warwickCoding 2016.</p>
     </div>
     <div class="madewith col-md-6 col-sm-6 col-xs-12">
-      <p>Built with <i class="fa fa-heart"></i> & <i class="fa fa-bolt"></i> in Warwick</p>
+      <p>Built with <i class="fa fa-heart"></i> &amp; <i class="fa fa-bolt"></i> in Warwick</p>
     </div>
   </footer>
 
@@ -436,7 +435,7 @@
   <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
   <script type="text/javascript" src="assets/plugins/owl-carousel/owl.carousel.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
-
+  <script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: '9166a526-85c6-44ed-a150-567db3616535', f: true }); done = true; } }; })();</script>
 </body>
 
 </html>
